--- a/src/views/notFound.handlebars
+++ b/src/views/notFound.handlebars
@@ -1,7 +1,4 @@
-<div class="box">
+<div class="boxNot">
     <h1>403 Not Found</h1>
-
-   <a href="/"><button class="btnChat">Inicio</button></a>
-
-    
+    <a href="/"><button class="btnP">Inicio</button></a>
 </div>
