--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,7 +1,7 @@
 <div>
-    <h1>REGISTER</h1>
-
-    <hr>
+    <br>
+    <h1>REGISTRATE</h1>
+    <br>
     <span class="box">
         <a href="/api/gitHub">
             <button class="btnChat">
@@ -14,27 +14,23 @@
     <br>
     <form class="box" method="post" action="/api/users/register">
 
-        <label for="first_name">First Name</label>
+        <label class="label" for="first_name">First Name</label>
         <input type="text" name="first_name" id="first_name1">
 
-        <label for="last_name">Last Name</label>
+        <label class="label" for="last_name">Last Name</label>
         <input type="text" name="last_name" id="last_name">
 
-        <label for="email">Email</label>
+        <label class="label" for="email">Email</label>
         <input type="email" name="email" id="email">
 
-        {{!-- <label for="username">User Name</label>
-        <input type="text" name="username" id="username"> --}}
-
-        <label for="age">Age</label>
+        <label class="label" for="age">Age</label>
         <input type="number" name="age" id="age">
 
-        <label for="password">Password</label>
+        <label class="label" for="password">Password</label>
         <input type="password" name="password" id="password">
 
         <button class="btnChat" type="submit">Register</button>
     </form>
-
 
 
     <span class="box">
