--- a/src/views/uploadDocuments.handlebars
+++ b/src/views/uploadDocuments.handlebars
@@ -1,36 +1,37 @@
 <div class="containerHome">
-    <h1>Bienvenido {{user.first_name}} {{user.username}} </h1>
+    <h1>{{user.first_name}} {{user.username}} </h1>
     <a class="logout-link" href="/">Inicio</a>
     <a class="logout-link" href="/products">Productos</a>
-    <a class="logout-link" href="/chat">chat</a>
-    <a class="logout-link" href="/uploadDocuments">Carga tus documentos</a>
-    <a class="logout-link" href="/realTimeProducts">Carga tus productos</a>
-    <a class="logout-link" href="/admUsers">Roles</a>
-    <a class="logout-link" href="/carts/{{cart._id}}"><i class="fas fa-shopping-cart"></i></a>
+    <a class="logout-link" href="/chat">Contáctanos </a>
+    <a class="logout-link" href="/realTimeProducts">Subir productos</a>
+    <a class="logout-link" href="/admUsers">Gestión de roles</a>
+    <a class="logout-link" href="/purcharser">Order</a>
+    <a class="logout-link" href="/mockingproducts">Faker</a>
+    <a class="logout-link" href="/api/docs">Desarrolladores</a>
     <form method="post" action="/api/users/logout">
-        <button class="logout-link" type="submit">Cerrar Session</button>
+        <button class="logout-link" type="submit">Cerrar Sesión</button>
     </form>
 </div>
 <hr>
-<div >
-<h1>Upload Documents</h1>
-<form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post"
-    enctype="multipart/form-data">
-    <label for="docs">Upload Documents:</label>
+<div>
+    <h1>Upload Documents</h1>
+   <form class="box" id="uploadForm" action="/api/users/{{user._id}}/documents" method="post" enctype="multipart/form-data">
+    <label for="docs">Subir Documentos:</label>
     <input type="file" name="docs" id="docs" multiple />
     <br>
-    <span id="error-message" class="error-message">You must upload at least 3 files.</span>
+    <span id="error-message" class="error-message">Debes subir al menos 3 archivos.</span>
     <br>
-       <p id="info-message" class="info-message">
-        To upgrade to premium, you need to upload the following documents:
+    <p id="info-message" class="info-message">
+        Para actualizar a premium, necesitas subir los siguientes documentos:
         <ul>
-            <li>Identification</li>
-            <li>Proof of Address</li>
-            <li>Proof of Bank Statement</li>
+            <li>Identificación</li>
+            <li>Prueba de Domicilio</li>
+            <li>Comprobante de Estado de Cuenta Bancario</li>
         </ul>
-        After uploading, please log in again to complete the process.
+        Después de subir los documentos, por favor, vuelve a iniciar sesión para completar el proceso.
     </p>
-    <button class="btnChat" type="submit">Subir</button>
+    <button class="btnP" type="submit">Subir</button>
 </form>
+
 
 <script src="/js/fileUploadHandler.js"></script>
