--- a/src/views/faker.handlebars
+++ b/src/views/faker.handlebars
@@ -1,86 +1,36 @@
 <div class="containerHome">
-    <h1>Bienvenido {{user.first_name}} {{user.username}} </h1>
-    <a class="logout-link" href="/">Productos</a>
+    <a class="logout-link" href="/">Inicio</a>
     <a class="logout-link" href="/products">Productos</a>
-    <a class="logout-link" href="/carts/{{cart._id}}">Carrito</a>
-    <a class="logout-link" href="/chat">chat</a>
-    <a class="logout-link" href="/uploadDocuments">Carga tus documentos</a>
-    <a class="logout-link" href="/realTimeProducts">Carga tus productos</a>
-    <a class="logout-link" href="/admUsers">Roles</a>
+    <a class="logout-link" href="/chat">Contáctanos</a>
+    <a class="logout-link" href="/uploadDocuments">Subir documentos</a>
+    <a class="logout-link" href="/realTimeProducts">Subir Productos</a>
+    <a class="logout-link" href="/admUsers">Gestión de roles</a>
+    <a class="logout-link" href="/purcharser">Order</a>
+    <a class="logout-link" href="/api/docs">Desarrolladores</a>
     <form method="post" action="/api/users/logout">
-        <button class="logout-link" type="submit">Cerrar Session</button>
+        <button class="logout-link" type="submit">Cerrar Sesión</button>
     </form>
 </div>
 <hr>
-<div >
-<div class="containerFaker">
-    {{#each products}}
-    {{#if this.description}}
-    <div class="productsFaker">
-        <h2 class="linea">{{this.title}}</h2>
-        <p>Description: {{this.description}}</p>
-        <p>Precio: ${{this.price}}</p>
-        <p>Code: {{this.code}}</p>
-        <p>ID: {{this.id}}</p>
-        <p>Category: {{this.category}}</p>
-        <img class="imgFaker" src="{{this.thumbnail}}" alt="{{this.description}}">
-        <br>
-        {{!-- <button class="success agregar" type="submit" data-productid="{{this.id}}">Agregar al carrito</button> --}}
-         <button class="success agregar" type="submit" data-productid="{{this.id}}" data-cartid="{{../user.cart}}"
+<br>
+<div>
+    <div class="containerFaker">
+        {{#each products}}
+        {{#if this.description}}
+        <div class="productsFaker">
+            <h2 class="linea">{{this.title}}</h2>
+            <p>Description: {{this.description}}</p>
+            <p>Precio: ${{this.price}}</p>
+            <p>Code: {{this.code}}</p>
+            <p>Category: {{this.category}}</p>
+            <img class="imgFaker" src="{{this.thumbnail}}" alt="{{this.description}}">
+            <br>
+            <button class="success agregar" type="submit" data-productid="{{this._id}}" data-cartid="{{../user.cart}}"
                 data-userid="{{../user._id}}">
                 Agregar al carrito
             </button>
+        </div>
+        {{/if}}
+        {{/each}}
     </div>
-    {{/if}}
-    {{/each}}
 </div>
-
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            document.querySelectorAll('.agregar').forEach(button => {
-                button.addEventListener('click', async (event) => {
-                    const productId = event.target.getAttribute('data-productid');
-                    const cartId = event.target.getAttribute('data-cartid');
-                    const userId = event.target.getAttribute('data-userid');
-                    const quantityInput = document.querySelector(`input[data-productid="${productId}"]`);
-                    const quantity = quantityInput ? parseInt(quantityInput.value, 10) : 1;
-
-                    console.log("Carrito ID:", cartId);
-                    console.log("Producto ID:", productId);
-                    console.log("Usuario ID:", userId);
-                    console.log("Cantidad seleccionada:", quantity);
-
-                    if (!cartId || !productId || !userId) {
-                        console.error('ID del carrito, del producto o del usuario no proporcionado');
-                        return;
-                    }
-
-                    try {
-                        const response = await fetch(`/api/cart/${cartId}/products/${productId}`, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({ userId, productId, quantity })
-                        });
-
-                        const result = await response.json();
-                        if (response.ok) {
-                            Swal.fire({
-                                title: "¡Producto agregado al carrito!",
-                                text: "¡Excelente elección!",
-                                icon: "success"
-                            });
-                            console.log('Producto agregado al carrito:', result);
-                        } else {
-                            console.error('Error al agregar el producto al carrito:', result.message);
-                        }
-                    } catch (error) {
-                        console.error('Error de red:', error);
-                    }
-                });
-            });
-        });
-
-    </script>
