--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,19 +1,20 @@
 <div class="containerHome">
-    <h1>Bienvenido {{user.first_name}} {{user.username}} </h1>
     <a class="logout-link" href="/">Inicio</a>
     <a class="logout-link" href="/products">Productos</a>
-    <a class="logout-link" href="/chat">Chat</a>
-    <a class="logout-link" href="/uploadDocuments">Carga tus documentos</a>
-    <a class="logout-link" href="/realTimeProducts">Carga tus productos</a>
-    <a class="logout-link" href="/admUsers">Roles</a>
+    <a class="logout-link" href="/chat">Contáctanos</a>
+    <a class="logout-link" href="/uploadDocuments">Subir documentos</a>
+    <a class="logout-link" href="/realTimeProducts">Subir productos</a>
+    <a class="logout-link" href="/admUsers">Gestión de roles</a>
     <a class="logout-link" href="/mockingproducts">Faker</a>
+    <a class="logout-link" href="/purcharser">Order</a>
+    <a class="logout-link" href="/api/docs">Desarrolladores</a>
     <a class="logout-link" href="/carts/{{cart._id}}"><i class="fas fa-shopping-cart"></i></a>
     <form method="post" action="/api/users/logout">
-        <button class="logout-link" type="submit">Cerrar Session</button>
+        <button class="logout-link" type="submit">Cerrar Sesión</button>
     </form>
 </div>
 <hr>
-<div >
+<div>
     <div class="containerData">
         <p><b>Nombre: </b>{{user.first_name}}{{user.name}}</p>
         <p><b>Usuario:</b> {{user.username}}</p>
@@ -22,11 +23,8 @@
         <p><b>Edad: </b>{{user.age}}</p>
         <p><b>ID del Usuario: </b>{{user._id}}</p>
         <p><b>ID del Carrito: </b>{{cart._id}}</p>
-      
         <a href="/carts/{{cart._id}}">
-        <button class="successCart"> <i class="fas fa-shopping-cart"></i> Carrito</button></a>
-
-
+            <button class="successCart"> <i class="fas fa-shopping-cart"></i> Carrito</button></a>
     </div>
 </div>
 
@@ -49,15 +47,15 @@
     {{/each}}
 
 </div>
-<div>
+<div class="nexContainerUno">
     {{#if hasPrevPage}}
-    <a href="{{this.prevLink}}">
+    <a href="{{this.prevLink}}" class="next">
         << Anterior</a>
             {{/if}}
 </div>
 <br>
-<div>
+<div class="nexContainer">
     {{#if hasNextPage}}
-    <a href="{{this.nextLink}}">Siguiente >></a>
+    <a href="{{this.nextLink}}" class="next">Siguiente >></a>
     {{/if}}
 </div>
